[project]
name = "langgraph-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.2",
    "langchain-openai>=0.2.2",
    "langgraph>=0.2.34",
    "langsmith>=0.1.132",
    "tavily-python>=0.5.0",
    "weave>=0.51.12",
]
